Replace linked list by LinkedMap in LRU